--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,28 @@
 {
-    "theme_color": "#f69435",
-    "background_color": "#f69435",
+    "theme_color": "#0E5896",
+    "background_color": "#0E5896",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/app.html",
+    "start_url": "app.html",
     "name": "Jigswap",
     "short_name": "Jigswap",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "assets/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "assets/icons/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/icon-384x384.png",
+            "src": "assets/icons/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "assets/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
